refactoring, separated view from analyzer